--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gh-pages-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tommck-github.github.io/gh-pages-react/",
   "dependencies": {
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
